--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
 
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+    @apply text-white no-underline bg-blue-500 px-4 py-2 rounded hover:bg-blue-400;
+  }  
 }
 
-*/
+.form-field {
+  @apply rounded
+}
