--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,6 @@
     <%= f.password_field :password_confirmation, class: "form-field" %>
   </div>
   <p>
-    <%= f.submit 'Create' , class: "btn-primary" %>
+    <%= f.submit 'Register' , class: "btn-primary" %>
   </p>
 <% end %>
