--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="prose mx-auto">
+  <body class="prose mx-auto flex flex-col justify-center items-center h-screen">
     <% flash.each do |type, msg| %>
       <div>
         <%= msg %>
