--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,35 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="prose mx-auto flex flex-col justify-center items-center h-screen">
-    <% flash.each do |type, msg| %>
-      <div>
-        <%= msg %>
-      </div>
+  <body class="mx-auto">
+    <% if current_user %>
+      <nav class="bg-white shadow-md w-full">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+          <div class="flex justify-between h-16">
+            <div class="flex">
+              <div class="flex-shrink-0 flex items-center">
+                <%= link_to root_path do %>
+                  <%= image_tag("scrappy-doo-cropped.png", :alt => "scrappy logo", class: "rounded-full ring ring-pink-500 w-12 h-12 bg-amber-400") %>
+                <% end %>
+              </div>
+            </div>
+            <div class="hidden md:ml-6 md:flex md:items-center">
+                <h1>Welcome, <%= current_user.username %></h1>
+                <%= link_to 'Logout', user_session_path(current_user), data: { turbo_method: :delete }, class: "text-gray-900 hover:text-gray-700 px-3 py-2 rounded-md text-sm font-medium" %><br><br>
+            </div>
+          </div>
+        </div>
+      </nav>
     <% end %>
-    <%= yield %>
+    
+    <div class="prose mx-auto">
+      <% flash.each do |type, msg| %>
+        <div>
+          <%= msg %>
+        </div>
+      <% end %>
+
+      <%= yield %>
+    </div>
   </body>
 </html>
