--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -1,8 +1,36 @@
-<% if current_user %>
-  <h1>Welcome, <%= current_user.username %></h1>
-  <%= link_to 'Logout', user_session_path(current_user), data: { turbo_method: :delete }, class: "btn-primary" %><br><br>
-<% else %>
-  <h1>This is the index page</h1>
-  <%= link_to 'Login', login_path , class: "btn-primary" %><br><br>
-<% end %>
-<%= link_to 'Secret page', '/keywords/secret', class: "btn-primary" %>
+<div class="grid grid-cols-1 w-full p-6">
+    <% if current_user %>
+        <%= form_with(url: keywords_path, method: :get, data: {turbo_frame: "keywords"}) do |form| %>
+            <div class="flex space-x-3">
+                <%= form.text_field :query, placeholder: "Keyword...", class: "py-2 px-2 rounded border ring-0 focus:ring-4 focus:ring-orange-100 focus:shadow-none focus:border-orange-500 focus:outline-none" %>
+
+                <%= form.submit 'Search', class: "px-2 py-2 font-medium
+            bg-orange-300 text-neutal-900 rounded flex items-center cursor-pointer hover:bg-orange-400 focus:ring-4 ring-0 focus:ring-orange-100" %>
+            </div>
+        <% end %>
+        <div>
+            <table class="text-left w-full min-w-full overflow-y-auto">
+                <thead class="bg-gray-400 sticky">
+                    <tr>
+                        <th>Keyword</th>
+                        <th>Action</th>
+                        <%# <th>Year</th> %>
+                    </tr>
+                </thead>
+                <tbody class="overflow-y-scroll">
+                    <% @keywords.each do |keyword| %>
+                         <tr>
+                            <td><%= keyword.keyword %></td>
+                            <td>-</td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
+        </div>
+    <% else %>
+        <div class="col-start-2 col-span-2">
+            <h1>This is the index page</h1>
+        </div>
+        <%= link_to 'Login', login_path , class: "btn-primary col-span-2 col-start-2" %>
+    <% end %>
+</div>
