feature: add import keywords with csv file

--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -1,13 +1,24 @@
 <div class="grid grid-cols-1 w-full p-6">
     <% if current_user %>
-        <%= form_with(url: keywords_path, method: :get, data: {turbo_frame: "keywords"}) do |form| %>
-            <div class="flex space-x-3">
-                <%= form.text_field :query, placeholder: "Keyword...", class: "py-2 px-2 rounded border ring-0 focus:ring-4 focus:ring-orange-100 focus:shadow-none focus:border-orange-500 focus:outline-none" %>
+        
+        <%= form_with url: import_keywords_path, html: {class: "grid grid-cols-4 gap-2 w-full my-2"}, local: true, multipart: true do |form| %>
+                <div class="row-span-1 col-span-4" ><%= form.label :file, "Import keywords", class: "text-base text-gray-500 font-semibold block" %></div>
+                <div class="row-span-2 col-span-3"><%= form.file_field :file, class: "w-full text-gray-400 font-semibold text-sm bg-white border file:cursor-pointer cursor-pointer file:border-0 file:py-3 file:px-4 file:mr-4 file:bg-gray-100 file:hover:bg-gray-200 file:text-gray-500 rounded", aria: { describedby: 'file_input_help' }, id: 'file_input' %></div>
+                <div class="row-span-2">
+                    <%= form.submit "Import", class: "px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none" %>
+                </div>
+                <div class="row-span-1 col-span-4"><p class="text-xs text-gray-400 mt-2" id="file_input_help">Only CSV file is allowed</p></div>
+        <% end %>
 
-                <%= form.submit 'Search', class: "px-2 py-2 font-medium
-            bg-orange-300 text-neutal-900 rounded flex items-center cursor-pointer hover:bg-orange-400 focus:ring-4 ring-0 focus:ring-orange-100" %>
+        <%= form_with(url: keywords_path, html: {class: "grid grid-cols-4 gap-2 w-full my-2"}, method: :get, data: {turbo_frame: "keywords"}) do |form| %>
+            <div class="col-span-3">
+                <%= form.text_field :query, placeholder: "Keyword...", class: "w-full py-2 px-2 rounded border ring-0 focus:ring-4 focus:ring-orange-100 focus:shadow-none focus:border-orange-500 focus:outline-none" %>
+            </div>
+            <div>
+                 <%= form.submit 'Search', class: "px-4 py-2 text-neutal-900 bg-orange-400 text-white rounded-lg hover:bg-orange-500 focus:ring-orange-100"%>
             </div>
         <% end %>
+
         <div>
             <table class="text-left w-full min-w-full overflow-y-auto">
                 <thead class="bg-gray-400 sticky">
