--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,12 +32,14 @@
       </nav>
     <% end %>
     
-    <div class="prose mx-auto">
-      <% flash.each do |type, msg| %>
-        <div>
-          <%= msg %>
-        </div>
-      <% end %>
+    <div class="prose mx-auto max-w-7xl">
+      <div class="grid grid-cols-3">
+        <% flash.each do |type, msg| %>
+          <div class="col-start-2">
+            <%= msg %>
+          </div>
+        <% end %>
+      </div>
 
       <%= yield %>
     </div>
