--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,27 +1,34 @@
-<h1>Register</h1>
-<%= form_with model: @user do |f| %>
-  <% if @user.errors.any? %>
-    <div>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+<div class="grid grid-cols-5 w-full py-6">
+  <div class="col-start-3 m-auto">
+    <h1>Register</h1>
+  </div>
+  <div class="col-start-3 m-auto">
+    <%= form_with model: @user do |f| %>
+      <div class="grid grid-cols-2 gap-3">
+        <% if @user.errors.any? %>
+          <div class="col-span-2">
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
         <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div>
-    <%= f.label :username %><br>
-    <%= f.text_field :username, class: "form-field" %>
+        <div class="col-span-2">
+          <%= f.label :username %><br>
+          <%= f.text_field :username, class: "form-field" %>
+        </div>
+        <div class="col-span-2">
+          <%= f.label :password %><br>
+          <%= f.password_field :password, class: "form-field" %>
+        </div>
+        <div class="col-span-2">
+          <%= f.label :password_confirmation %><br>
+          <%= f.password_field :password_confirmation, class: "form-field" %>
+        </div>
+        <%= f.submit 'Register' , class: "btn-primary col-span-1" %>
+        <%= link_to 'Back', login_path , class: "btn-secondary col-span-1" %>
+      </div>
+    <% end %>
   </div>
-  <div>
-    <%= f.label :password %><br>
-    <%= f.password_field :password, class: "form-field" %>
-  </div>
-  <div>
-    <%= f.label :password_confirmation %><br>
-    <%= f.password_field :password_confirmation, class: "form-field" %>
-  </div>
-  <p>
-    <%= f.submit 'Register' , class: "btn-primary" %>
-  </p>
-<% end %>
+</div>
