style: update buttons in login and register views

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,8 +26,8 @@
           <%= f.label :password_confirmation %><br>
           <%= f.password_field :password_confirmation, class: "form-field" %>
         </div>
-        <%= f.submit 'Register' , class: "btn-primary col-span-1" %>
-        <%= link_to 'Back', login_path , class: "btn-secondary col-span-1" %>
+        <%= f.submit 'Register' , class: "btn-primary col-span-2" %>
+        <%= link_to 'Back', login_path , class: "btn-secondary col-span-2 text-center" %>
       </div>
     <% end %>
   </div>
