style: adjust table header

--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -21,13 +21,13 @@
 
         <div class="col-span-4 col-start-2">
             <table class="text-left w-full min-w-full overflow-y-auto rounded">
-                <thead class="bg-gray-400 sticky">
+                <thead class="bg-gray-200 sticky text-center">
                     <tr>
-                        <th>Keyword</th>
-                        <th>Total Ads</th>
-                        <th>Total Links</th>
-                        <th>Total Results</th>
-                        <th>Action</th>
+                        <th class="py-2 px-2">Keyword</th>
+                        <th class="py-2 px-2">Total Ads</th>
+                        <th class="py-2 px-2">Total Links</th>
+                        <th class="py-2 px-2">Total Results</th>
+                        <th class="py-2 px-2">Action</th>
                     </tr>
                 </thead>
                 <tbody class="overflow-y-scroll">
